--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
        <h2 class="text-center mt-5 text-2xl font-bold">Projects</h2>
 
       <button onclick="click()" class="md ml-8 mt-5 bg-gradient-to-r from-purple-400 to-blue-500 hover:from-pink-500 hover:to-purple-600 text-white font-bold py-3 px-6 rounded-full shadow-lg transform transition-all duration-500 ease-in-out hover:scale-110 hover:brightness-110 hover:animate-pulse active:animate-bounce">
-        <a href="">Art Blog Page</a>
+        <a href="blog page/index.html">Art Blog Page</a>
       </button>
 
 
       <button onclick="click()" class="md ml-8 mt-5 bg-gradient-to-r from-purple-400 to-blue-500 hover:from-pink-500 hover:to-purple-600 text-white font-bold py-3 px-6 rounded-full shadow-lg transform transition-all duration-500 ease-in-out hover:scale-110 hover:brightness-110 hover:animate-pulse active:animate-bounce">
-        <a href="">Company Landing Page</a>
+        <a href="Company Landing PageTravel/index.html">Company Landing Page</a>
       </button>
 
 
       <button onclick="click()" class="md ml-8 mt-5 bg-gradient-to-r from-purple-400 to-blue-500 hover:from-pink-500 hover:to-purple-600 text-white font-bold py-3 px-6 rounded-full shadow-lg transform transition-all duration-500 ease-in-out hover:scale-110 hover:brightness-110 hover:animate-pulse active:animate-bounce">
-        <a href="">Food Menu Project</a>
+        <a href="food menu projects/index.html">Food Menu Project</a>
       </button>
 
        <section class="text-gray-600 body-font">
