--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     
 
 <body class="bg-[#172554] text-white">
-      <h1 class="text-center mt-5 text-xl font-bold">All Projects </h1>
-       <h2 class="text-center mt-5 text-2xl font-bold">Projects</h2>
+      <h1 class="text-center mt-5 text-xl font-bold">All Projects  Of HTML</h1>
+       <h2 class="text-center mt-5 text-2xl font-bold">HTML Projects</h2>
 
       <button onclick="click()" class="md ml-8 mt-5 bg-gradient-to-r from-purple-400 to-blue-500 hover:from-pink-500 hover:to-purple-600 text-white font-bold py-3 px-6 rounded-full shadow-lg transform transition-all duration-500 ease-in-out hover:scale-110 hover:brightness-110 hover:animate-pulse active:animate-bounce">
         <a href="blog page/index.html">Art Blog Page</a>
